tests/NormalTests/paczka1/small_fuzzy/75239791.err
Error in line 2: rVFznYwhU A184 9,9
Error in line 5: Cub6R6al S899 16,5
